--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "leaflet": "^1.9.4",
+    "nodemailer": "^7.0.9",
     "nuxt": "^4.1.2",
     "swiper": "^12.0.2",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
-  "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a"
+  "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a",
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251008.0"
+  }
 }
